--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <mainClass>com.microsoft.playwright.CLI</mainClass>
+         <mainClass>com.example.posiv</mainClass>
         </configuration>
       </plugin>
     </plugins>
